--- a/greetings.html
+++ b/greetings.html
@@ -79,13 +79,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1faCImhGf7g.mp3">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1pvANXiJGDA.mp3');">
 										<figcaption style="font-weight:bold;">Selamat Pagi </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s11v49PSVKqZ.mp3">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1R5HrIGqZUF.mp3');">
 										<figcaption style="font-weight:bold;">Guten Morgen</figcaption>
 									</figure>
 								</div>
@@ -101,13 +101,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1Sn93ykezRV.mp3">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s19RCJxk0T4m.mp3');">
 										<figcaption style="font-weight:bold;">Selamat Sore </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1d1hsfROWpG.mp3">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s19RCJxk0T4m.mp3');">
 										<figcaption style="font-weight:bold;">Guten Abend</figcaption>
 									</figure>
 								</div>
@@ -123,13 +123,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1NIPA264nTq.mp3">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1RDingAYCnD.mp3');">
 										<figcaption style="font-weight:bold;">Selamat Malam  </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1MxWDn04oLD.mp3">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1LLmYuqv3AT.mp3');">
 										<figcaption style="font-weight:bold;">Gute Nacht</figcaption>
 									</figure>
 								</div>
@@ -145,13 +145,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1BUr5CKKaav.mp3">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1ESStA7KqyZ.mp3');">
 										<figcaption style="font-weight:bold;">Sampai Jumpa </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1DEAjLCJvWH.mp3">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1nq0dZsqO0Y.mp3');">
 										<figcaption style="font-weight:bold;">Auf Wiedersehen</figcaption>
 									</figure>
 								</div>
@@ -167,13 +167,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1zxsaD1Cllo.mp3">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1FFGvKPL0Iy.mp3');">
 										<figcaption style="font-weight:bold;">Terima kasih </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1YNZfHz0NWi.mp3">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1CVxiMaXQpb.mp3');">
 										<figcaption style="font-weight:bold;">Danke</figcaption>
 									</figure>
 								</div>
@@ -189,13 +189,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1icfciMnhD4.mp3">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1Vf6ig5m9R1.mp3');">
 										<figcaption style="font-weight:bold;">Maaf  </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1zcgW6ZzBWf.mp3">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1ONkt6ddWuy.mp3');">
 										<figcaption style="font-weight:bold;">Es Tut mir leid</figcaption>
 									</figure>
 								</div>
@@ -211,13 +211,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/c/Ya_!.mp3');">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1QPsOwXONOV.mp3');">
 										<figcaption style="font-weight:bold;">Ya ! </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/c/Ja.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1BzXTkS5kPV.mp3');">
 										<figcaption style="font-weight:bold;">Ja</figcaption>
 									</figure>
 								</div>
@@ -233,13 +233,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/Tidak.mp3');">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1EPmzBmapYi.mp3');">
 										<figcaption style="font-weight:bold;">Tidak </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/c/Nein.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s14RXnrz4iOu.mp3');">
 										<figcaption style="font-weight:bold;">Nein</figcaption>
 									</figure>
 								</div>
@@ -255,13 +255,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/c/Mungkin-bisa_jadi.mp3');">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1lcJdLVOBLl.mp3');">
 										<figcaption style="font-weight:bold;">Mungkin/bisa jadi </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/c/vielleicht.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1sYkUjZTCTD.mp3');">
 										<figcaption style="font-weight:bold;">Vielleicht</figcaption>
 									</figure>
 								</div>
@@ -277,13 +277,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/c/Kembali!.mp3');">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1GmS2hDl6Fo.mp3');">
 										<figcaption style="font-weight:bold;">Kembali! </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/c/Bitte.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1NJQyjAqKeD.mp3');">
 										<figcaption style="font-weight:bold;">Bitte</figcaption>
 									</figure>
 								</div>
@@ -299,13 +299,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/c/Nama_Saya.....mp3');">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1UPYzBQx5W9.mp3');">
 										<figcaption style="font-weight:bold;">Nama Saya.... </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/c/Ich_Heise.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1m8TXYTElEK.mp3');">
 										<figcaption style="font-weight:bold;">Ich Heise</figcaption>
 									</figure>
 								</div>
@@ -321,13 +321,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/c/Umur_Saya.....mp3');">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1FafO2bLu3X.mp3');">
 										<figcaption style="font-weight:bold;">Umur Saya.... </figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/c/Ich_bin.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s13AsYjLmSX4.mp3');">
 										<figcaption style="font-weight:bold;">Ich bin</figcaption>
 									</figure>
 								</div>
@@ -343,13 +343,13 @@
 							<div class="ui-grid-a">
 								<div class="ui-block-a">
 									<figure>
-										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/c/Saya_Tidak_Mengerti.mp3');">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1XENETP2VmW.mp3');">
 										<figcaption style="font-weight:bold;">Saya Tidak Mengerti</figcaption>
 									</figure>
 								</div>
 								<div class="ui-block-b">
 									<figure>
-										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/Das_verstehe_ich_nicht.mp3');">
+										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1miaejfYASA.mp3');">
 										<figcaption style="font-weight:bold;">Das verstehe ich nicht</figcaption>
 									</figure>
 								</div>
