--- a/kamus.html
+++ b/kamus.html
@@ -79,12 +79,12 @@
 								<div class="ui-grid-a">
 									<div class="ui-block-a">
 										<figure>
-										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1qMZYkLXie9.mp3">
+										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s17IdOnbW2yU.mp3')">
 										<figcaption style="font-weight:bold;">Abu-abu</figcaption>
 									</div>
 									<div class="ui-block-b">
 										<figure>
-											<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s19ci4IRMTcj.mp3">
+											<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1D5IlB6FXxX.mp3')">
 											<figcaption style="font-weight:bold;">Grau</figcaption>
 										</figure>
 									</div>
@@ -100,13 +100,13 @@
 								<div class="ui-grid-a">
 									<div class="ui-block-a">
 										<figure>
-											<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1MEsMMDpBe0.mp3">
+											<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1KkwljKlnNB.mp3');">
 											<figcaption style="font-weight:bold;">Biru</figcaption>
 										</figure>
 									</div>
 									<div class="ui-block-b">
 										<figure>
-											<img class="movie-pics" src="images/Germany-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1Mv1AKTqTBZ.mp3">
+											<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1oiAWCFa4Ur.mp3');">
 											<figcaption style="font-weight:bold;">Blau</figcaption>
 										</figure>
 									</div>
@@ -122,13 +122,13 @@
 								<div class="ui-grid-a">
 									<div class="ui-block-a">
 										<figure>
-											<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1XkBRyYl1Bz.mp3">
+											<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1DqPBo4fvet.mp3');">
 											<figcaption style="font-weight:bold;">Hijau</figcaption>
 										</figure>
 									</div>
 									<div class="ui-block-b">
 										<figure>
-											<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s19DjFwoXgXB.mp3">
+											<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s19EWNPbfAmj.mp3');">
 											<figcaption style="font-weight:bold;">Grun</figcaption>
 										</figure>
 									</div>
@@ -144,13 +144,13 @@
 								<div class="ui-grid-a">
 									<div class="ui-block-a">
 										<figure>
-											<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1yfAQWq2Fnt.mp3">
+											<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1XKx9K4RZte.mp3');">
 											<figcaption style="font-weight:bold;">Hitam</figcaption>
 										</figure>
 									</div>
 									<div class="ui-block-b">
 										<figure>
-											<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1U0kADiqhKp.mp3">
+											<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1iXoUU4WGjV.mp3');">
 											<figcaption style="font-weight:bold;">Schwartz</figcaption>
 										</figure>
 									</div>
@@ -166,13 +166,13 @@
 								<div class="ui-grid-a">
 									<div class="ui-block-a">
 										<figure>
-											<img class="movie-pics" src="images/Indonesia-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1FSX9E6ayfK.mp3">
+											<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1kceuxa65rz.mp3');">
 											<figcaption style="font-weight:bold;">Merah Muda</figcaption>
 										</figure>
 									</div>
 									<div class="ui-block-b">
 										<figure>
-											<img class="movie-pics" src="images/Germany-icon.png" onclick="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1dE6v7FcuvO.mp3">
+											<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s170wrb9uoG9.mp3');">
 											<figcaption style="font-weight:bold;">Rosa</figcaption>
 										</figure>
 									</div>
@@ -188,7 +188,7 @@
 								<div class="ui-grid-a">
 									<div class="ui-block-a">
 										<figure>
-											<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/warna/2/merah.mp3');">
+											<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1ghqyfEkulE.mp3');">
 											<figcaption style="font-weight:bold;">Merah</figcaption>
 										</figure>
 									</div>
@@ -210,7 +210,7 @@
 								<div class="ui-grid-a">
 									<div class="ui-block-a">
 										<figure>
-											<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/warna/2/coklat.mp3');">
+											<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1fCF8JES3Nh.mp3');">
 											<figcaption style="font-weight:bold;">Coklat</figcaption>
 										</figure>
 									</div>
@@ -232,7 +232,7 @@
 								<div class="ui-grid-a">
 									<div class="ui-block-a">
 										<figure>
-											<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/warna/2/merah.mp3');">
+											<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1Fb0wO5fZgH.mp3');">
 											<figcaption style="font-weight:bold;">Ungu</figcaption>
 										</figure>
 									</div>
@@ -254,7 +254,7 @@
 								<div class="ui-grid-a">
 									<div class="ui-block-a">
 										<figure>
-											<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/warna/2/ungu.mp3');">
+											<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1EdNg9snJQS.mp3');">
 											<figcaption style="font-weight:bold;">Kuning</figcaption>
 										</figure>
 									</div>
