--- a/kamus2.html
+++ b/kamus2.html
@@ -79,13 +79,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s10Wjs66KELC.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s12OdRTwISGa.mp3');">
   										<figcaption style="font-weight:bold;">Ayam</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s10Wjs66KELC.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1yWIi68q9fg.mp3');">
   										<figcaption style="font-weight:bold;">Hunn</figcaption>
   									</figure>
   								</div>
@@ -101,13 +101,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/1/bebek.mp3');">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1D3KgarKZHJ.mp3');">
   										<figcaption style="font-weight:bold;">Bebek</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1r9F7x4xCiC.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1DakEJER3ld.mp3');">
   										<figcaption style="font-weight:bold;">Ente</figcaption>
   									</figure>
   								</div>
@@ -123,13 +123,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1TbRboDVQaa.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1RRa5QVs1E7.mp3');">
   										<figcaption style="font-weight:bold;">Burung</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1tRhOFYY7iW.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1N1jlUPTzaT.mp3');">
   										<figcaption style="font-weight:bold;">Vogel</figcaption>
   									</figure>
   								</div>
@@ -145,13 +145,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1e7WslMUzwj.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1NQkEiBNyn7.mp3');">
   										<figcaption style="font-weight:bold;">Gajah</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1evBjUyZicL.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1KLAUpU26tB.mp3');">
   										<figcaption style="font-weight:bold;">Elefant</figcaption>
   									</figure>
   								</div>
@@ -167,13 +167,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1kKuO3mFuy0.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1DY7655RfmO.mp3');">
   										<figcaption style="font-weight:bold;">Harimau</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1usX9JUpQNg.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1SUwf64oJ2u.mp3');">
   										<figcaption style="font-weight:bold;">Tiger</figcaption>
   									</figure>
   								</div>
@@ -189,13 +189,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/1/ikan.mp3');">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1dCqrqRVwdG.mp3');">
   										<figcaption style="font-weight:bold;">Ikan</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/2/fisch.mp3');">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1SRiYEFjiVt.mp3');">
   										<figcaption style="font-weight:bold;">Fisch</figcaption>
   									</figure>
   								</div>
@@ -211,13 +211,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/1/jerapah.mp3');">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s19iuGPtjcAW.mp3');">
   										<figcaption style="font-weight:bold;">Jerapah</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/2/giraffe.mp3');">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s17fWty7DiWw.mp3');">
   										<figcaption style="font-weight:bold;">Giraffe</figcaption>
   									</figure>
   								</div>
@@ -233,13 +233,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/1/kelinci.mp3');">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1qeB23KV7SF.mp3');">
   										<figcaption style="font-weight:bold;">Kelinci</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/2/kaninchen.mp3');">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1hTpjUNisrP.mp3');">
   										<figcaption style="font-weight:bold;">Kaninchen</figcaption>
   									</figure>
   								</div>
@@ -255,13 +255,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/1/kucing.mp3');">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1auHg0YDKy9.mp3');">
   										<figcaption style="font-weight:bold;">Kucing</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/2/katze.mp3');">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s10fH3LuIWGc.mp3');">
   										<figcaption style="font-weight:bold;">Katze</figcaption>
   									</figure>
   								</div>
@@ -277,13 +277,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/1/kuda.mp3');">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s120K4chiRKq.mp3');">
   										<figcaption style="font-weight:bold;">Kuda</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/binatang/2/pferd.mp3');">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1gBeEWIdTWj.mp3');">
   										<figcaption style="font-weight:bold;">Pferd</figcaption>
   									</figure>
   								</div>
