--- a/kamus3.html
+++ b/kamus3.html
@@ -79,13 +79,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1fROnP7QbBM.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s15HP5t0N4MG.mp3');">
   										<figcaption style="font-weight:bold;">Alpukat</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s16N8JN3CSg3.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1CPjDYZDclJ.mp3');">
   										<figcaption style="font-weight:bold;">Avocado</figcaption>
   									</figure>
   								</div>
@@ -101,13 +101,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1UaAGQf6wM3.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1V88XrGDpdQ.mp3');">
   										<figcaption style="font-weight:bold;">Anggur</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1UaAGQf6wM3.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1WetT4s2ZRM.mp3');">
   										<figcaption style="font-weight:bold;">Trauben</figcaption>
   									</figure>
   								</div>
@@ -123,13 +123,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1uY9GKlHsVn.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1fC5cYYnI6s.mp3');">
   										<figcaption style="font-weight:bold;">Apel</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1nLiYe3NAaK.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1i9zJiuC3O5.mp3');">
   										<figcaption style="font-weight:bold;">Apfel</figcaption>
   									</figure>
   								</div>
@@ -145,13 +145,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1waKjGwGIse.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1SMhXBducvV.mp3');">
   										<figcaption style="font-weight:bold;">Belimbing</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1e5EP6PQnKY.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1VVLPk03kQo.mp3');">
   										<figcaption style="font-weight:bold;">Strenfruncht</figcaption>
   									</figure>
   								</div>
@@ -167,13 +167,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s13mqi0EUo0L.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s196qDnLgaqb.mp3');">
   										<figcaption style="font-weight:bold;">Durian</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1YF7eHEzxCW.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1o29drrOyeh.mp3');">
   										<figcaption style="font-weight:bold;">Durianfruncht</figcaption>
   									</figure>
   								</div>
@@ -189,13 +189,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/buah/1/mangga.mp3');">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1n1AFTd1bJW.mp3');">
   										<figcaption style="font-weight:bold;">Mangga</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/buah/2/mango.mp3');">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1fxAlv4iooL.mp3');">
   										<figcaption style="font-weight:bold;">Mango</figcaption>
   									</figure>
   								</div>
@@ -211,13 +211,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/buah/1/pisang.mp3');">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1k43SJCPpYb.mp3');">
   										<figcaption style="font-weight:bold;">Pisang</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/buah/2/bananen.mp3');">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1nn60Q2ozav.mp3');">
   										<figcaption style="font-weight:bold;">Banananen</figcaption>
   									</figure>
   								</div>
@@ -233,13 +233,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/buah/1/stroberi.mp3');">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s161hvo7GaRR.mp3');">
   										<figcaption style="font-weight:bold;">Stroberi</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/buah/2/erdbeeren.mp3');">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1WflcaNQ4LG.mp3');">
   										<figcaption style="font-weight:bold;">Erdbeeren</figcaption>
   									</figure>
   								</div>
@@ -255,13 +255,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/buah/1/tomat.mp3');">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s17UQ33pdtwi.mp3');">
   										<figcaption style="font-weight:bold;">Tomat</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/buah/2/tomaten.mp3');">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1oDmWeT2HiV.mp3');">
   										<figcaption style="font-weight:bold;">Tomaten</figcaption>
   									</figure>
   								</div>
@@ -277,13 +277,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/buah/1/pepaya.mp3');">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1AfjRDkMcXU.mp3');">
   										<figcaption style="font-weight:bold;">Pepaya</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/buah/2/papaya.mp3');">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1JMKVq6iccL.mp3');">
   										<figcaption style="font-weight:bold;">Papaya</figcaption>
   									</figure>
   								</div>
@@ -299,13 +299,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/buah/1/jambu.mp3');">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1F1zvAjX8as.mp3');">
   										<figcaption style="font-weight:bold;">Jambu</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/buah/2/guave.mp3');">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s17uwSMw5JPS.mp3');">
   										<figcaption style="font-weight:bold;">Guave</figcaption>
   									</figure>
   								</div>
@@ -321,13 +321,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/buah/1/lemon.mp3');">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1E2iGOXpGfi.mp3');">
   										<figcaption style="font-weight:bold;">Lemon</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/buah/2/zitrone.mp3');">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1HxaMJRxGDU.mp3');">
   										<figcaption style="font-weight:bold;">Zitrone</figcaption>
   									</figure>
   								</div>
