--- a/kamus4.html
+++ b/kamus4.html
@@ -79,13 +79,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s18Yq7ObQ4Sy.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/angka/2/satu.mp3');">
   										<figcaption style="font-weight:bold;">Satu</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s12jMFPWMWRf.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/angka/1/ein.mp3');">
   										<figcaption style="font-weight:bold;">Ein</figcaption>
   									</figure>
   								</div>
@@ -101,13 +101,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0DpqEDyA0Q2.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/angka/2/dua.mp3');">
   										<figcaption style="font-weight:bold;">Dua</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0w810x24vyh.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/angka/1/zwei.mp3');">
   										<figcaption style="font-weight:bold;">Zwei</figcaption>
   									</figure>
   								</div>
@@ -123,13 +123,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1D4fNwOfHg3.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/angka/2/tiga.mp3');">
   										<figcaption style="font-weight:bold;">Tiga</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0c4aWxKGPod.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/angka/1/drei.mp3');">
   										<figcaption style="font-weight:bold;">Drei</figcaption>
   									</figure>
   								</div>
@@ -145,13 +145,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1VS5yNXWdwW.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/angka/2/empat.mp3');">
   										<figcaption style="font-weight:bold;">Empat</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0oduT8PUaq1.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/angka/1/vier.mp3');">
   										<figcaption style="font-weight:bold;">Vier</figcaption>
   									</figure>
   								</div>
@@ -167,13 +167,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1faCImhGf7g.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('/android_asset/www/audio/angka/2/lima.mp3');">
   										<figcaption style="font-weight:bold;">Lima</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0YwOY3WPYUF.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/angka/1/kalk.mp3');">
   										<figcaption style="font-weight:bold;">Kalk</figcaption>
   									</figure>
   								</div>
@@ -195,7 +195,7 @@
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1iajjLf7Ymq.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/angka/1/mehr.mp3');">
   										<figcaption style="font-weight:bold;">Mehr</figcaption>
   									</figure>
   								</div>
@@ -217,7 +217,7 @@
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1MB8PuscNWi.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/angka/1/sieben.mp3');">
   										<figcaption style="font-weight:bold;">Sieben</figcaption>
   									</figure>
   								</div>
@@ -239,7 +239,7 @@
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0DzjECPb9iq.mp3">
+  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s03Qp8Y4vxpm.mp3">
   										<figcaption style="font-weight:bold;">Acht</figcaption>
   									</figure>
   								</div>
@@ -261,7 +261,7 @@
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0np7RAJ724i.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/angka/1/neun.mp3');">
   										<figcaption style="font-weight:bold;">Neun</figcaption>
   									</figure>
   								</div>
@@ -283,7 +283,7 @@
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0tyJz0wHjY8.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('/android_asset/www/audio/angka/1/null.mp3');">
   										<figcaption style="font-weight:bold;">Null</figcaption>
   									</figure>
   								</div>
