--- a/kamus5.html
+++ b/kamus5.html
@@ -79,13 +79,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0cRdf44ViC3.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1miaejfYASA.mp3');">
   										<figcaption style="font-weight:bold;">A</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1QsAnBjZHT9.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1Z1FsMPnv9s.mp3');">
   										<figcaption style="font-weight:bold;">Ein</figcaption>
   									</figure>
   								</div>
@@ -101,13 +101,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0gniAlC1SRf.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1C0ubq4amSs.mp3');">
   										<figcaption style="font-weight:bold;">B</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s1.vocaroo.com/media/download_temp/Vocaroo_s1ayKX4g82zj.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1J6gPBjZnGa.mp3');">
   										<figcaption style="font-weight:bold;">B</figcaption>
   									</figure>
   								</div>
@@ -123,13 +123,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0UvNEcp0uF9.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1rl8i3QiUNi.mp3');">
   										<figcaption style="font-weight:bold;">C</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s05kLbW7RBd8.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1ylEskhlurk.mp3');">
   										<figcaption style="font-weight:bold;">C</figcaption>
   									</figure>
   								</div>
@@ -145,13 +145,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0uzGnIV6CQQ.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1Jc1Zh9A0PN.mp3');">
   										<figcaption style="font-weight:bold;">D</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0kDQVvZE8ag.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1liewO8Do2J.mp3');">
   										<figcaption style="font-weight:bold;">D</figcaption>
   									</figure>
   								</div>
@@ -167,13 +167,13 @@
   							<div class="ui-grid-a">
   								<div class="ui-block-a">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0hHXPiinnKj.mp3">
+  										<img class="movie-pics" src="images/Indonesia-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1f38mcp4PZr.mp3');">
   										<figcaption style="font-weight:bold;">E</figcaption>
   									</figure>
   								</div>
   								<div class="ui-block-b">
   									<figure>
-  										<img class="movie-pics" src="https://s0.vocaroo.com/media/download_temp/Vocaroo_s0EYQbUQLmBF.mp3">
+  										<img class="movie-pics" src="images/Germany-icon.png" onclick="playAudio('https://s1.vocaroo.com/media/download_temp/Vocaroo_s1viaEW6ObTy.mp3');">
   										<figcaption style="font-weight:bold;">E</figcaption>
   									</figure>
   								</div>
